# inf_ind_25_26

./: .gitignore  CMakeLists.txt  README.md
cfg/: README.md
data/: README.md
lib/: lectura.c  lectura.h  pausar_consola.c  productos.c  productos.h
src-STM32/PuertoSerie/: PuertoSerie_Comm.c  PuertoSerie_V1.c  PuertoSerie_V2.c
src-maq-exp/: maq_exp_fich.c
src-temas/tema3-punt-arrays-funcs/ejemplos-arrays/: array1_basico.c  array2_leer.c  array4_suma_elems.c  arrays_notepad.txt
src-temas/tema5-menus-structs/ej-maquina-exp/: maquina_expend.c
src-temas/tema7-memoria/: ej1-memoria-dinamica.c
tema3-punt-arrays-funcs/ejemplos-arrays/: array3_inverso.c
tema3-punt-arrays-funcs/ejercicios-entrega-t3/: ejercicio1.c  ejercicio2.c  ejercicio3.c  ejercicio3_bonus.c
tema5-menus-structs/ej-maquina-exp/: maquina_expend.c
tema5-menus-structs/practica-tema5/: ejercicio_t5_a.c  ejercicio_t5_b.c
tema5-menus-structs/practica_tema5/: ejercicio_t5_a.c  ejercicio_t5_b.c
tema6-ficheros/: maq_exp_fich.c
